--- a/projeto-react-api-1/src/components/Container/Container.module.css
+++ b/projeto-react-api-1/src/components/Container/Container.module.css
@@ -1,12 +1,13 @@
-.container {
-    width: 90%;
-    margin: 0 auto;
+.container{
+    width: 1200px;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: row;
     justify-content: space-between;
-    
+    margin: 0 auto;
+    flex-wrap: wrap;
 }
 
 .min_height{
-    min-height: 75%
+    min-height: 75%;
+    
 }
