--- a/projeto-react-api-1/src/components/BookCard/BookCard.module.css
+++ b/projeto-react-api-1/src/components/BookCard/BookCard.module.css
@@ -4,6 +4,8 @@
     border-radius: 5px;
     width: 100%;
     margin: 0.5%;
+    min-width: 700px;   
+    justify-content: center;
 }
 
 .book_card h4{
@@ -26,7 +28,6 @@
 .category_text{
     display: flex;
     align-items: center;
-    justify-content: center;
 }
 
 .category_text span{
@@ -36,4 +37,35 @@
     border-radius: 50%;
     background-color: #CCC;
     margin-right: 5px;
+}
+
+/* CSS DE FORMATAÇÃO DOS BOTÕES DE ALTERAR/EXCLUIR */
+.book_card_actions{
+    margin-top: 1.2em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.book_card_actions a, 
+.book_card_actions button{
+    text-decoration: none;
+    border: none;
+    background-color: #FFF;
+    color: #222;
+    font-size: .9em;
+    padding: .6em 1em;
+    margin-right: 1em;
+    border: 1px solid #222;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 40s;
+    cursor: pointer;
+}
+
+.book_card_actions a:hover, 
+.book_card_actions button:hover{
+    background-color: #FF4733;
+    color: #FFF;
 }
